src/objects/Booking_Details__c.object
<CustomObject>
    <fields>
        <fullName>Apartment_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Apartment Name</label>
        <referenceTo>Apartment__c</referenceTo>
        <relationshipLabel>Booking Details</relationshipLabel>
        <relationshipName>Booking_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Balance_to_be_paid__c</fullName>
        <formula>Total_cost__c -  Paid_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance to be paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_registration__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of registration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_given__c</fullName>
        <formula>Enquiry_name__r.Discount_given__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount given</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Enquiry_name__c</fullName>
        <label>Enquiry name</label>
        <referenceTo>Enquiry__c</referenceTo>
        <relationshipLabel>Booking Details</relationshipLabel>
        <relationshipName>Booking_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Floor_number__c</fullName>
        <formula>Enquiry_name__r.Floor_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Floor number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_amount__c</fullName>
        <label>Paid amount</label>
        <summarizedField>Installment_payment__c.Actual_amount_paid__c</summarizedField>
        <summaryForeignKey>Installment_payment__c.Booking_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Price_of_flat__c</fullName>
        <formula>Enquiry_name__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price of flat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stages__c</fullName>
        <label>Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Installment creation</fullName>
                </value>
                <value>
                    <fullName>Pending payment</fullName>
                </value>
                <value>
                    <fullName>Payment completion</fullName>
                </value>
                <value>
                    <fullName>Registration over</fullName>
                </value>
                <value>
                    <fullName>Handed over</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_cost__c</fullName>
        <formula>Enquiry_name__r.Total_cost_with_discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_cost_without_discount__c</fullName>
        <formula>Enquiry_name__r.Total_cost_without_discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total cost without discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_booking__c</fullName>
        <formula>Enquiry_name__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of booking</label>
        <type>Text</type>
    </fields>
    <label>Booking Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Booking  Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>